# tools.kindle.com

./: .gitignore  kindle-ocr.spec  main.py  pyproject.toml
