[project]
name = "tools-kindle-com"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "easyocr>=1.7.2",
    "fpdf2>=2.8.7",
    "img2pdf>=0.6.3",
    "numpy>=2.4.6",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "pyautogui>=0.9.54",
]
